--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,24 @@ nav {
   padding-left: 30%;
 }
 
+.usuario {
+  border-radius: 50%;
+  margin-left: 30%;
+  width: 30%;
+}
+
+.modal {
+  position: absolute;
+  top: 0;
+  float: left;
+  max-width: 100%;
+  max-height: 80%;
+  border-radius: 10px;
+}
+
+.input {
+  height: 10%;
+}
 /*Primera seccion Imagen taxi*/
 .fondo {
   background-image: url(../assets/images/taxi1.jpg);
